12 roles (#15)
* Add Roles endpoints

* Add body validation in Roles

* Correct JWT token description in README

* 05 endpoints (#13)

* Добавил signup, change

* register roles

* fixed signup(), change()

* added login()

* Rename api_forms to api_models

* 02 tests (#11)

* pytest runs, but tests are not yet ready

* Добавил signup

* Remove print statement in commands.py

* Update docs and models to store refresh-tokens in redis (#10)

* Update docs and models to store refresh-tokens in redis

* Minor improvements

* Add roles endpoints

* Merge tests and api branches

* Make functional tests directory

* Add the first functional test

* Make db fixture work

* Prepare tests for usage

---------


* Prepare tests for usage

* Add readme and requirements

* Correct JWT token description in README

* Добавил signup, change

---------


* Add Roles endpoints

* 05 endpoints (#13)

* Добавил signup, change

* register roles

* fixed signup(), change()

* added login()

* Rename api_forms to api_models

* 02 tests (#11)

* pytest runs, but tests are not yet ready

* Добавил signup

* Remove print statement in commands.py

* Update docs and models to store refresh-tokens in redis (#10)

* Update docs and models to store refresh-tokens in redis

* Minor improvements

* Add roles endpoints

* Merge tests and api branches

* Make functional tests directory

* Add the first functional test

* Make db fixture work

* Prepare tests for usage

---------


* Prepare tests for usage

* Add readme and requirements

* Correct JWT token description in README

* Добавил signup, change

---------


* Add Roles endpoints

* Add body validation in Roles

* Empty v1/__init__.py

---------
